2009-07-28	Xi Yang	<hiyangxi@gmail.com>

	* configure.ac: undefine BSP_PRESS_KEY_FOR_RESET
	* startup/bspreset.c, include/ep7312.h: Support skyeye shutdown device
	
2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am: Removed references to deleted file
	'../shared/irq/irq_asm.S'.
	* irq/bsp_irq_asm.S: Renamed ExecuteITHandler() into
	bsp_interrupt_dispatch().

2009-07-12	Xi Yang <hiyangxi@gmail.com>

	* configure.ac, clock/clockdrv.c, startup/bspreset.c: Adjust clock
	initialization for clock tick so rtmonuse test now runs on Skyeye.
	Joel added configure magic and place holder in bspreset.c for Skyeye
	hardware reset device support.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2008-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove -Qy from *link.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared tm27.h stub.
	* include/tm27.h: Removed.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clockdrv.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.
